[gd_scene load_steps=5 format=3 uid="uid://bgq7oyot1ditq"]

[ext_resource type="Theme" uid="uid://nqo3du58mpkg" path="res://themes/menu_button.tres" id="1_0qged"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_bjsh5"]

[sub_resource type="Animation" id="Animation_73xpa"]
resource_name = "end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundTransition:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_miqtf"]
_data = {
"end": SubResource("Animation_73xpa")
}

[node name="PauseMenu" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bjsh5")

[node name="Background" type="Polygon2D" parent="."]
self_modulate = Color(1, 1, 1, 0.67451)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1920, 0, 1920, 1080, 0, 1080)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 90

[node name="Continue" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("1_0qged")
text = "Continue"

[node name="Achievements" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("1_0qged")
text = "Achievements"

[node name="Options" type="Button" parent="VBoxContainer" groups=["Buttons"]]
visible = false
layout_mode = 2
theme = ExtResource("1_0qged")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("1_0qged")
text = "Quit"

[node name="BackgroundTransition" type="Polygon2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1920, 0, 1920, 1080, 0, 1080)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_miqtf")
}

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
